--- a/src/components/pages/projects/projects.css
+++ b/src/components/pages/projects/projects.css
@@ -1,15 +1,56 @@
+.big-container {
+  display: flexbox;
+  height: 85%;
+  width: 80%;
+  margin: auto;
+  margin-top: 90px;
+  justify-content: center;
+}
+
 .medium-container {
-    display: flex;
-    width: 60%;
-    margin: auto;
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+  height: 50%;
+  justify-content: center;
 }
 
 .small-container {
-    display: flex;
-    border: 1px solid red;
-    width: auto;
+  display: flex;
+  background-color: white;
+  margin: 10px;
+  height: auto;
+  width: 300px;
 }
 
-.small-container > a >img{
-    width: auto;
+.small-container > a > img {
+  width: 100%;
+  height: 80%;
+}
+.small-container > a {
+  text-align: center;
+  color: black;
+  text-decoration: none;
+  width: 100%;
+  height: 100%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+#calculadora {
+  background-image: url(images-projects/Calculadora.png);
+}
+
+#instagram {
+    background-image: url(images-projects/Instagram-copia.png);
+}
+#site {
+    background-image: url(images-projects/site-generico.png);
+}
+
+#futuramente {
+  background-image: url(images-projects/emBreve.webp);
+  background-position: bottom;
+  background-size: cover;
 }
