--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,6 +1,6 @@
 .Header-container {
   display: flex;
-  justify-content:center;
+  justify-content: center;
   width: 100%;
   height: 10%;
   position: fixed;
@@ -8,6 +8,7 @@
 }
 
 .Buttons-container {
+  backdrop-filter: blur(4px);
   width: 60%;
   display: inline-flex;
   justify-content: space-around;
