--- a/src/components/pages/projects/projects.css
+++ b/src/components/pages/projects/projects.css
@@ -13,7 +13,7 @@
   display: flex;
   flex-wrap: wrap;
   width: 100%;
-  height: 50%;
+  height: 47%;
   justify-content: center;
 }
 
@@ -59,4 +59,17 @@
 
 .vizualizado {
   opacity: 1;
+}
+
+#arrow {
+  display: flex;
+  justify-content: center;
+}
+#arrow > a {
+  height: 90px;
+  width: 120px;
+  background-image: url(../../../images/arrow.png);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
 }
