--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -30,3 +30,14 @@
   opacity: 1;
   border-bottom: solid 1px blueviolet;
 }
+
+@media screen and (max-width:1024px){
+  .Buttons-container {
+    width: 100%;
+  }
+}
+@media screen and (max-width:425px){
+  .Header-container {
+    display: none;
+  }
+}
