--- a/src/components/pages/home/home.css
+++ b/src/components/pages/home/home.css
@@ -1,3 +1,59 @@
+.home-container {
+  display: flexbox;
+  height: 100%;
+}
+
+.img-perfil {
+  display: flex;
+  width: 100%;
+  height: 60%;
+  align-items: center;
+  justify-content: center;
+  color: white;
+}
+
+.home-container h1,
+p {
+  display: flex;
+  width: 100%;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  font-size: 3rem;
+}
+
 #arrow-home {
-    
+  display: flex;
+  justify-content: center;
+}
+
+#arrow-home > a {
+  height: 90px;
+  width: 120px;
+  background-image: url(../../../images/arrow.png);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  margin-top: 20px;
+}
+
+@media screen and (max-width:425px) {
+  .home-container h1 {
+    font-size: 4rem;
+    width: 95%;
+    margin-bottom: 40px;
+    margin-top: 40px;
+  }
+  .home-container p {
+    margin-top: 0px;
+    margin-bottom: 0px;
+  }
+  .img-perfil {
+    height: 45%;
+  }
+  
+  #arrow-home {
+    margin-top: 10px;
+  }
 }
