--- a/src/components/pages/contact/footer/footer.css
+++ b/src/components/pages/contact/footer/footer.css
@@ -1,9 +1,10 @@
 .Footer {
   display: flex;
-  align-items: center;
   background-color: #20293a;
+  align-items: center;
   text-align: center;
   justify-content: center;
   color: white;
   width: 100%;
+  height: 50px;
 }
