--- a/src/components/pages/projects/projects.css
+++ b/src/components/pages/projects/projects.css
@@ -80,8 +80,13 @@
   background-repeat: no-repeat;
   background-size: 100% 100%;
 }
+@media screen and (max-width: 1440px) {
+  #arrow {
+    display: none;
+  }
+}
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 940px) {
   .medium-container {
     grid-template-columns: auto auto;
   }
@@ -89,21 +94,20 @@
   #futuramente-apagar {
     display: none;
   }
-  #arrow {
-    display: none;
-  }
 }
 
-@media screen and (max-width: 425px) {
+@media screen and (max-width: 625px) {
   .big-container {
-    margin-top: 50px;
+    margin-top: 30px;
+    width: 100%;
+    height: 90%;
   }
   .small-container {
-    height: 330px;
-    width: 190px;
+    height: 95%;
+    width: 45vw;
   }
   #arrow {
     margin-top: 10px;
-    display: flex;
+    display: none;
   }
 }
