--- a/src/components/pages/about/about.css
+++ b/src/components/pages/about/about.css
@@ -1,16 +1,29 @@
 .container-about {
-    display: flexbox;
-    width: 60%;
-    height: 100%;
-    justify-content: center;
-    align-items: center;
-    border: 1px solid red;
+  display: flex;
+  width: 60%;
+  height: 100%;
+  justify-content: center;
+  text-align: center;
+  flex-direction: column;
 }
 
-
+.container-about > h1 {
+  margin-top: -100px;
+  font-size: 3rem;
+  color: whitesmoke;
+  width: 100%;
+}
 .text-about {
-    margin-top: 100px;
+  width: 100%;
+  margin-top: 100px;
+  width: 100%;
+  text-align: center;
+  font-size: 2rem;
+  color: whitesmoke;
+}
+
+@media screen and (max-width:900px) {
+  .container-about {
     width: 100%;
-    text-align: center;
-    border: 1px solid red;
+  }
 }
