--- a/src/components/pages/contact/footer/footer.css
+++ b/src/components/pages/contact/footer/footer.css
@@ -1,10 +1,12 @@
 .Footer {
   display: flex;
+  position: absolute;
+  bottom: 0;
   background-color: #20293a;
   align-items: center;
   text-align: center;
   justify-content: center;
   color: white;
   width: 100%;
-  height: 50px;
+  height: auto;
 }
