--- a/src/components/pages/habilities/habilites.css
+++ b/src/components/pages/habilities/habilites.css
@@ -2,11 +2,13 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  justify-items: center;
   width: 100%;
   height: 85%;
   margin-top: 95px;
   opacity: 0;
   transition: 2s;
+  position: relative;
 }
 
 .medium-container-hab {
@@ -37,8 +39,6 @@
   margin: 10px;
 }
 
-
-
 #small-container-text {
   display: flex;
   height: auto;
@@ -57,10 +57,15 @@
 #arrow-hab {
   display: flex;
   justify-content: center;
-  margin-top: 120px;
+  align-items: center;
+  position: absolute;
+  bottom: 10px;
+  left: 0px;
+  width: 100%;
 }
 
 #arrow-hab > a {
+  position: relative;
   height: 90px;
   width: 120px;
   background-image: url(../../../images/arrow.png);
@@ -82,18 +87,32 @@
   .medium-container-hab {
     width: 100vw;
   }
-  @media screen and (max-width: 768px) {
-  }
+}
 
+@media screen and (max-width: 768px) {
   #small-container-hab {
     width: auto;
-    margin: auto 25px;
+    margin: auto;
+    padding: 20px;
+  }
+}
+
+@media screen and (max-width: 620px) {
+  #small-container-hab {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 5px;
+    justify-content: space-around;
+  }
+  .img-hab {
+    margin: 5px;
   }
 }
 
 @media screen and (max-width: 425px) {
   .big-container-hab {
     height: 100%;
+    margin-top: 50px;
   }
 
   .medium-container-hab {
@@ -101,13 +120,8 @@
   }
 
   #small-container-hab {
-    width: 100%;
     display: flex;
     flex-wrap: wrap;
-  }
-
-  .img-hab {
-    margin: 10px;
   }
 
   #small-container-text {
@@ -116,5 +130,17 @@
 
   #arrow-hab {
     margin-top: 30px;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  #small-container-hab {
+    padding: 10px;
+  }
+  .img-hab {
+    padding: 7px;
+    height: 90px;
+    width: 80px;
+    margin: 2px;
   }
 }
