--- a/src/components/pages/about/about.css
+++ b/src/components/pages/about/about.css
@@ -5,6 +5,7 @@
   justify-content: center;
   text-align: center;
   flex-direction: column;
+  position: absolute;
 }
 
 .container-about > h1 {
@@ -22,7 +23,27 @@
   color: whitesmoke;
 }
 
-@media screen and (max-width:900px) {
+#arrow-about {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  bottom: 10px;
+  left: 0px;
+  width: 100%;
+}
+
+#arrow-about > a {
+  position: relative;
+  height: 90px;
+  width: 120px;
+  background-image: url(../../../images/arrow.png);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+}
+
+@media screen and (max-width: 900px) {
   .container-about {
     width: 100%;
   }
