--- a/src/components/pages/home/home.css
+++ b/src/components/pages/home/home.css
@@ -6,7 +6,7 @@
 .img-perfil {
   display: flex;
   width: 100%;
-  height: 60%;
+  height: 50%;
   align-items: center;
   justify-content: center;
   color: white;
@@ -26,10 +26,15 @@ p {
 #arrow-home {
   display: flex;
   justify-content: center;
+  align-items: center;
+  position: absolute;
+  bottom: 10px;
+  left: 0px;
+  width: 100%;
 }
 
 #arrow-home > a {
-  position: sticky;
+  position: relative;
   height: 90px;
   width: 120px;
   background-image: url(../../../images/arrow.png);
