--- a/src/components/pages/home/home.css
+++ b/src/components/pages/home/home.css
@@ -45,14 +45,16 @@ p {
 
 @media screen and (max-width: 425px) {
   .home-container h1 {
-    font-size: 4rem;
+    font-size: 3.5rem;
     width: 95%;
+    margin: auto;
     margin-bottom: 40px;
     margin-top: 40px;
   }
   .home-container p {
     margin-top: 0px;
     margin-bottom: 0px;
+    font-size: 2.5rem;
   }
   .img-perfil {
     height: 45%;
@@ -62,3 +64,10 @@ p {
     margin-top: 10px;
   }
 }
+
+@media screen and (max-height: 800px) {
+  .img-perfil {
+    height: 30%;
+  }
+}
+
